manifests/authentik/authentik/deployment.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: authentik
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik
  namespace: authentik
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: https
    # - name: external
    #   namespace: gateway
    #   sectionName: https
  hostnames:
    - "authentik.batlab.io"
  rules:
    - backendRefs:
        - name: authentik-server
          port: 80
